@@ -1,3 +1,9 @@
+2020-01-30 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php,
+	  previous.php:
+	  Added News - SDCC 4.0.0 release.
+
 2020-01-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php,
